<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/blue_700"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnRedirectToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        android:text="@string/btnRedirectToLoginText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:id="@+id/btnRegirectToPhoneLogin"
        android:text="@string/btnRedirectToPhoneLoginText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:id="@+id/btnRedirectToRegister"
        android:text="@string/btnRedirectToRegisterText"/>

</LinearLayout>