<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="180dp"
        android:padding="8dp"
        android:textColorHint="#A6C1C1"
        android:hint="@string/phoneNumberHint"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verificationCode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:hint="@string/verificationCodeHint"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColorHint="#A6C1C1"
        android:textAlignment="center"
        android:layout_below="@+id/phoneNumber"
        android:visibility="invisible"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSendCode"
        android:text="@string/btnSendCodeText"
        android:textAllCaps="false"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="1dp"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_below="@+id/verificationCode"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnVerify"
        android:text="@string/btnVerifyText"
        android:textAllCaps="false"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="1dp"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_below="@+id/btnSendCode"
        android:visibility="invisible"/>

</RelativeLayout>