<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginPic"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="45dp" />

            <EditText
                android:id="@+id/loginMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginMailHint"
                android:layout_below="@+id/loginPic"
                android:inputType="textEmailAddress"
                android:layout_alignParentStart="true"
                android:textColorHint="#A6C1C1"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:padding="4dp" />

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/loginMail"
                android:hint="@string/loginPassHint"
                android:inputType="textPassword"
                android:textColorHint="#A6C1C1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginPass"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:text="@string/forgotPass"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:onClick="resetPassword"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:padding="4dp"
                android:text="@string/btnLoginText"
                android:textAllCaps="false"
                android:layout_below="@+id/forgotPass"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/newUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:textSize="17sp"
                android:layout_below="@+id/btnLogin"
                android:text="@string/noAcc"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:onClick="redirectToRegister"/>

            <TextView
                android:id="@+id/anotherLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newUser"
                android:layout_alignParentStart="true"
                android:text="@string/anotherLoginText"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btnPhoneLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/anotherLogin"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:padding="4dp"
                android:text="@string/phoneLogin"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>