<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registrationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="42sp"
            android:textColor="@color/mint"
            android:fontFamily="sans-serif-condensed-medium"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:padding="4dp"
            android:background="@drawable/round_edit_text"
            android:drawableEnd="@drawable/ic_identity"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/mint"
            android:textColorHint="@color/mint"
            android:textSize="20sp"
            android:layout_below="@id/registrationView"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:padding="4dp"
            android:background="@drawable/round_edit_text"
            android:drawableEnd="@drawable/ic_email"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/mint"
            android:textColorHint="@color/mint"
            android:textSize="20sp"
            android:layout_below="@id/username"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_toggle_reg"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/mint"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="248dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:passwordToggleTint="@drawable/password_toggle_color"
            app:hintTextColor="@color/mint"
            android:layout_below="@id/email">

            <EditText
                android:id="@+id/password"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/mint"
                android:textAlignment="center"
                android:textColor="@color/mint"
                android:textStyle="normal"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:padding="4dp"
                android:gravity="center_horizontal|bottom"
                android:layout_below="@id/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="19dp"
            android:padding="4dp"
            android:layout_below="@id/password_toggle_reg"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/register"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/round_button"
            android:drawableEnd="@drawable/ic_register"
            android:onClick="RegisterClick"/>

</RelativeLayout>
    </ScrollView>
</RelativeLayout>
